# Mart-n-bot

./: README.md  fix_test.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
bot/: exchange.py  strategy.py
martn_bot/: main.py
martn_bot/bot/: exchange.py  strategy.py
tests/: test_import.py
