[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martn-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["martn_bot*"]

[tool.flake8]
max-line-length = 100
exclude = [".git","__pycache__",".venv","venv",".mypy_cache",".pytest_cache"]

[tool.pytest.ini_options]
norecursedirs = ".git .venv venv __pycache__ .mypy_cache .pytest_cache"
